# DEF-W9-11_LSFDNet

./: .env.serve.example  .gitignore  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: debug.toml  default.toml  paper.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
ros2/: anima_lsfdnet_node.py
ros2/launch/: lsfdnet.launch.py
src/anima_lsfdnet/: __init__.py  api.py  blocks.py  checks.py  config.py  dataset.py  eval.py  export.py  infer.py  io.py  losses.py  metrics.py  model.py  monitoring.py  serve.py  train.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api.py  test_config.py  test_dataset.py  test_infer.py  test_metrics.py  test_model.py
